# Havn

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  install.sh
.github/workflows/: ci.yml  release.yml  smoke.yml
apps/dashboard/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  server.mjs
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/agents/[id]/: page.tsx
apps/dashboard/app/agents/[id]/memory/: page.tsx
apps/dashboard/app/agents/[id]/settings/: page.tsx
apps/dashboard/app/agents/[id]/skills/: page.tsx
apps/dashboard/app/agents/new/: page.tsx
apps/dashboard/app/credentials/: page.tsx
apps/dashboard/app/teams/: page.tsx
apps/dashboard/app/teams/[id]/: layout.tsx  page.tsx
apps/dashboard/app/teams/[id]/agents/: page.tsx
apps/dashboard/app/teams/[id]/audit/: page.tsx
apps/dashboard/app/teams/[id]/credentials/: page.tsx
apps/dashboard/app/teams/[id]/members/: page.tsx
apps/dashboard/app/teams/[id]/roles/: page.tsx
apps/dashboard/app/teams/[id]/usage/: page.tsx
apps/dashboard/components/: Markdown.tsx  Sidebar.tsx
apps/dashboard/lib/: api.ts  protocol.ts  websocket.ts
crates/havn-cli/: Cargo.toml
crates/havn-cli/src/: agent.rs  api.rs  credential.rs  doctor.rs  gateway.rs  logs.rs  main.rs  nested_ns.rs  paths.rs  role.rs  setup.rs  start.rs  status.rs  team.rs  user.rs
crates/havn-core/: Cargo.toml
crates/havn-core/src/: error.rs  ids.rs  lib.rs  message.rs  policy.rs
crates/havn-db/: Cargo.toml  build.rs
crates/havn-db/migrations/: 0001_initial_schema.sql  0002_drop_usd_columns.sql  0003_users_simplify.sql  0004_seed_system_roles.sql  0005_cross_agent_queries.sql  0006_credentials_name_namespace.sql
crates/havn-db/migrations_agent/: 0001_initial_schema.sql  0002_typed_memory.sql  0003_memory_recall_supersedes.sql  0004_skills_curator.sql  0005_memory_embeddings.sql  0006_skills_embeddings.sql
crates/havn-db/src/: agent.rs  error.rs  lib.rs
crates/havn-db/src/agent/: conversations.rs  hybrid_common.rs  memory.rs  skills_index.rs
crates/havn-db/src/repo/: agents.rs  audit.rs  credential_usage.rs  credentials.rs  cron.rs  cross_agent_queries.rs  mod.rs  roles.rs  team_memberships.rs  teams.rs  users.rs
crates/havn-gateway/: Cargo.toml
crates/havn-gateway/src/: admin_rpc.rs  agent_registry.rs  agent_socket.rs  audit.rs  auth.rs  channel_id_codec.rs  channel_router.rs  config.rs  credential_resolver.rs  cron.rs  heartbeat.rs  keyring.rs  main.rs  perm.rs  policy_resolver.rs  query_broker.rs  reload.rs  secret_ref.rs  webchat.rs  workspace.rs
crates/havn-gateway/src/api/: agents.rs  audit.rs  bootstrap.rs  channel.rs  conversation.rs  credentials.rs  cron.rs  embedding.rs  llm.rs  mcp.rs  me.rs  members.rs  memory.rs  mod.rs  roles.rs  skills.rs  team_credentials.rs  teams.rs  webchat_ws.rs
crates/havn-gateway/src/llm_proxy/: anthropic.rs  gemini.rs  mod.rs  openai.rs  provider.rs
crates/havn-init/: Cargo.toml
crates/havn-init/src/: main.rs
crates/havn-proto/: Cargo.toml
crates/havn-proto/src/: channel.rs  codec.rs  lib.rs
crates/havn-runtime/: Cargo.toml
crates/havn-runtime/src/: curator.rs  curator_scheduler.rs  hooks.rs  init.rs  main.rs  memory_aging.rs  sandbox.rs  seccomp.rs  skills.rs  system_prompt.rs  tool_loop.rs
crates/havn-runtime/src/embedding/: backfill.rs  hrr.rs  hybrid.rs  local.rs  mod.rs  openai.rs
crates/havn-runtime/src/mcp/: mod.rs  tool.rs
crates/havn-runtime/src/tools/: agent_query.rs  files.rs  memory.rs  mod.rs  network.rs  shell.rs  skill_manage.rs  subagent.rs
crates/havn-spawner/: Cargo.toml
crates/havn-spawner/src/: cgroup.rs  lib.rs  namespace.rs  network.rs  ns_setup.rs  subprocess.rs
scripts/: smoke.sh
