[package]
name = "havn-gateway"
description = "havn gateway — message routing, auth, LLM proxy, cron, hot reload."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "havn-gateway"
path = "src/main.rs"

[dependencies]
havn-core.workspace = true
havn-proto.workspace = true
havn-spawner.workspace = true
havn-db.workspace = true
sqlx.workspace = true
reqwest.workspace = true
tokio.workspace = true
uuid.workspace = true
futures-util.workspace = true
notify.workspace = true
arc-swap.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
age.workspace = true
secrecy.workspace = true
async-trait.workspace = true

[lints]
workspace = true
