[package]
name = "havn-spawner"
description = "Agent spawner trait + Linux-namespace implementation for havn."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
havn-core.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[lints]
workspace = true
